# DataCopilot

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.http
config/: config.py
controller/: DataSourceApi.py  QueryDataApi.py
dao/: DBHelper.py  DataSourceDao.py  DataTransfer.py
utils/: DBQueryUtils.py
