[tool.poetry]
name = "data copilot"
version = "0.1.0"
description = ""
authors = ["jackchen <cl_bb_1992@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
peewee = "^3.16.2"
pymysql = "^1.0.3"
cx_Oracle = "^8.3.0"
pyodbc = "^4.0.39"
redis = "^4.5.4"
PyMongo = "^4.3.3"
clickhouse-driver = "^0.2.5"
ujson = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
